@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
skinparam style strictuml
hide empty members


class Java2Puml
class PumlDoclet
class PumlDiagram


Java2Puml " 1\t" --> "\t1" PumlDoclet : appelle à l'aide de javadoc >
PumlDoclet  " 1\t" --> "1\t" PumlDiagram : Crée le diagramme puml >



@enduml